<resources>
    <string name="app_name">2DOF Controller</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">exit</string>
    <string name="action_bluetooth">Bluetooth Power</string>
    <string name="action_connection">Connect to Device</string>
    <string name="action_input_mode">Change Input Mode</string>
    <string name="action_awareness">Awareness Timer</string>
</resources>
